feat: add basic integration of html templates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title><%= content_for(:title) || "Tennis Scoreboard" %></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -14,12 +15,34 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
-    <%# Includes all stylesheet files in app/assets/stylesheets %>
-    <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    <header class="header">
+        <section class="nav-header">
+            <div class="brand">
+                <div class="nav-toggle">
+                    <img src="<% asset_path("menu.png") %>" alt="Logo" class="logo">
+                </div>
+                <span class="logo-text">TennisScoreboard</span>
+            </div>
+            <div>
+                <nav class="nav-links">
+                    <a class="nav-link" href="<%= root_path %>">Home</a>
+                    <a class="nav-link" href="<%= matches_path %>">Matches</a>
+                </nav>
+            </div>
+        </section>
+    </header>
+
     <%= yield %>
+
+    <footer>
+        <div class="footer">
+            <p>&copy; Tennis Scoreboard, project from <a href="https://zhukovsd.github.io/java-backend-learning-course/">zhukovsd/java-backend-learning-course</a> roadmap.</p>
+        </div>
+    </footer>
   </body>
 </html>
