--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,16 +1,59 @@
-<p style="color: green"><%= notice %></p>
+<% content_for(:title) { "Tennis Scoreboard | Finished Matches" } %>
+<% content_for(:head) do %>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+<% end %>
 
-<% content_for :title, "Matches" %>
+<main>
+    <div class="container">
+        <h1>Matches</h1>
+        <div class="input-container">
+            <input class="input-filter" placeholder="Filter by name" type="text" />
+            <div>
+                <a href="#">
+                    <button class="btn-filter">Reset Filter</button>
+                </a>
+            </div>
+        </div>
 
-<h1>Matches</h1>
+        <table class="table-matches">
+            <tr>
+                <th>Player One</th>
+                <th>Player Two</th>
+                <th>Winner</th>
+            </tr>
+            <tr>
+                <td>Rafael Nadal</td>
+                <td>Roger Federer</td>
+                <td><span class="winner-name-td">Rafael Nadal</span></td>
+            </tr>
+            <tr>
+                <td>Rafael Nadal</td>
+                <td>Roger Federer</td>
+                <td><span class="winner-name-td">Roger Federer</span></td>
+            </tr>
+            <tr>
+                <td>Rafael Nadal</td>
+                <td>Roger Federer</td>
+                <td><span class="winner-name-td">Rafael Nadal</span></td>
+            </tr>
+            <tr>
+                <td>Rafael Nadal</td>
+                <td>Roger Federer</td>
+                <td><span class="winner-name-td">Roger Federer</span></td>
+            </tr>
+            <tr>
+                <td>Rafael Nadal</td>
+                <td>Roger Federer</td>
+                <td><span class="winner-name-td">Rafael Nadal</span></td>
+            </tr>
+        </table>
 
-<div id="matches">
-  <% @matches.each do |match| %>
-    <%= render match %>
-    <p>
-      <%= link_to "Show this match", match %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New match", new_match_path %>
+        <div class="pagination">
+            <a class="prev" href="#"> < </a>
+            <a class="num-page current" href="#">1</a>
+            <a class="num-page" href="#">2</a>
+            <a class="num-page" href="#">3</a>
+            <a class="next" href="#"> > </a>
+        </div>
+    </div>
+</main>
