--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<% content_for(:title) { "Tennis Scoreboard | Home" } %>
+<% content_for(:head) do %>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+<% end %>
+
+<main>
+    <div class="container">
+        <h1>Welcome to Tennis Scoreboard</h1>
+        <p>Manage your tennis matches, record results, and track rankings</p>
+        <div class="welcome-image"></div>
+        <div class="form-container center">
+            <a class="homepage-action-button" href="<%= new_match_path %>">
+                <button class="btn start-match">
+                    Start a new match
+                </button>
+            </a>
+            <a class="homepage-action-button" href="<%= matches_path %>">
+                <button class="btn view-results">
+                    View match results
+                </button>
+            </a>
+        </div>
+    </div>
+</main>
