feat: update matches/show with actual data from ongoing match

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -20,19 +20,19 @@
                 </thead>
                 <tbody>
                 <tr class="player1">
-                    <td class="table-text">Rafael Nadal</td>
-                    <td class="table-text">2</td>
-                    <td class="table-text">4</td>
-                    <td class="table-text">40</td>
+                    <td class="table-text"><%= @match[:player_one].name %></td>
+                    <td class="table-text"><%= @match[:player_one_sets] || 0 %></td>
+                    <td class="table-text"><%= @match[:player_one_games] || 0%></td>
+                    <td class="table-text"><%= @match[:player_one_points] || 0%></td>
                     <td class="table-text">
                         <div class="score-btn">Score</div>
                     </td>
                 </tr>
                 <tr class="player2">
-                    <td class="table-text">Roger Federer</td>
-                    <td class="table-text">2</td>
-                    <td class="table-text">3</td>
-                    <td class="table-text">15</td>
+                    <td class="table-text"><%= @match[:player_two].name %></td>
+                    <td class="table-text"><%= @match[:player_two_sets] || 0 %></td>
+                    <td class="table-text"><%= @match[:player_two_games] || 0%></td>
+                    <td class="table-text"><%= @match[:player_two_points] || 0%></td>
                     <td class="table-text">
                         <div class="score-btn">Score</div>
                     </td>
