feat: add redirect to /matches after current match ending

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -21,31 +21,17 @@
                 <th>Player Two</th>
                 <th>Winner</th>
             </tr>
-            <tr>
-                <td>Rafael Nadal</td>
-                <td>Roger Federer</td>
-                <td><span class="winner-name-td">Rafael Nadal</span></td>
-            </tr>
-            <tr>
-                <td>Rafael Nadal</td>
-                <td>Roger Federer</td>
-                <td><span class="winner-name-td">Roger Federer</span></td>
-            </tr>
-            <tr>
-                <td>Rafael Nadal</td>
-                <td>Roger Federer</td>
-                <td><span class="winner-name-td">Rafael Nadal</span></td>
-            </tr>
-            <tr>
-                <td>Rafael Nadal</td>
-                <td>Roger Federer</td>
-                <td><span class="winner-name-td">Roger Federer</span></td>
-            </tr>
-            <tr>
-                <td>Rafael Nadal</td>
-                <td>Roger Federer</td>
-                <td><span class="winner-name-td">Rafael Nadal</span></td>
-            </tr>
+            <% @matches.each do |match| %>
+                <tr>
+                    <td><%= match.winner.name %></td>
+                    <td><%= match.loser.name %></td>
+                    <td>
+                        <span class="winner-name-td">
+                            <%= match.winner.name %>
+                        </span>
+                    </td>
+                </tr>
+            <% end %>
         </table>
 
         <div class="pagination">
